kubernete/microk8s/templates/configs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gs-cloud-network
  namespace: KUBERNETES-NAMESPACE
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/client-max-body-size: "500M"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600s"
    nginx.ingress.kubernetes.io/proxy-body-size: "500M"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "8"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600s"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600s"

    # Deshabilitar el redireccionamiento
    nginx.ingress.kubernetes.io/proxy-redirect: "off"

    # Configuración de CORS
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "false"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Content-Type, Accept, Authorization, Origin, User-Agent"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, PATCH, OPTIONS"
    nginx.ingress.kubernetes.io/cors-expose-headers: "Content-Range, Content-Length, Accept-Ranges"

    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"

spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - KUBERNETES-SITE-URL
    secretName: CLUSTER-ISSUER-NAME
  rules:
  - host: KUBERNETES-SITE-URL

    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gateway
            port:
              number: 8080

      - path: /login
        pathType: Prefix
        backend:
          service:
            name: gateway
            port:
              number: 8080

      - path: /acl
        pathType: Prefix
        backend:
          service:
            name: acl
            port:
              number: 8080
